Fixed configure script to list missing dependencies

--- a/CMD-R/todo.txt
+++ b/CMD-R/todo.txt
@@ -2,3 +2,4 @@
 Permissions manager
 Offline status
 Run cmd-r in background and control it from a different program
+Fix configure missing dependency list system
