--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ Dependency list in readme (including c# libraries and nuget packages, with copyr
 
 Bot core:
 IMPORTANT: Auto-save instead of change-save (autosave has a configurable interval)
+IMPORTANT: Prevent empty commands (like just the '+' or '+ <something>')
 Help command by categories (with multiple pages)
 Offline status
 Run cmd-r in background and control it from a different program
