--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,7 @@ Dependency list in readme (including c# libraries and nuget packages, with copyr
 Bot core:
 IMPORTANT: Clean and format README
 IMPORTANT: Reduce string and constructor usage and replace with enums
-IMPORTANT: Auto-save instead of change-save (autosave has a configurable interval)
+IMPORTANT: Auto-save instead of change-save (autosave must have a configurable interval)
 Help command by categories (with multiple pages, start commands with '+')
 Offline status
 Run cmd-r in background and control it from a different program
