--- a/todo.txt
+++ b/todo.txt
@@ -14,6 +14,8 @@ DM Message support
 Custom command prefixes
 
 Branch support in update-cmdr
+Patch file support in update-cmdr
+Custom url support in update-cmdr
 Help system im update-cmdr and help argument
 
 Module SDK
