--- a/todo.txt
+++ b/todo.txt
@@ -24,7 +24,7 @@ Module SDK documentation
 Bot features (each feature needs its own module):
 Command to show which users have a specific role (permission can be set by the admin)
 Nickname change detection, per channel
-Timers
+Timers (single line)
 Silent timers (single line)
 Polls
 Events
