--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,8 @@ Bot core:
 IMPORTANT: Clean and format README
 IMPORTANT: Reduce string and constructor usage and replace with enums
 IMPORTANT: Add CMD-R Version system (it should work with patch numbers, allowing minimal patch version in modules, howerver, the patch class should also have a version identity string)
+Build status on GitHub (through travis, jenkins or something like that)
+CMD-R Lite - Barebone CMD-R, no default plugins.
 Help command, list commands in categories (with multiple pages, start commands with '+')
 Offline status through seperate program
 Run cmd-r in background and control it from a different program
