Switch to DotNet Core

--- a/todo.txt
+++ b/todo.txt
@@ -8,15 +8,14 @@ IMPORTANT: Remove as many try/catch statements as possible and replace with bett
 IMPORTANT: Clean and format README
 IMPORTANT: Reduce string and constructor usage and replace with enums
 IMPORTANT: Add CMD-R Version system (it should work with patch numbers, allowing minimal patch version in modules, howerver, the patch class should also have a version identity string)
+
 Build status on GitHub (through travis, jenkins or something like that)
 CMD-R Lite - Barebone CMD-R, no default plugins.
-Help command, list commands in categories (with multiple pages, start commands with '+')
 Offline status through seperate program
 Run cmd-r in background and control it from a different program
 System reboot command (requires console-given permission, requires reboot script, intergrates into the start shell script, can only be used when started from the shell script)
 System reboot and update command (requires console-given permission, requires reboot script, intergrates into the start shell script, can only be used when started from the shell script)
 DM Message support
-Custom command prefixes
 Better logo for CMD-R Official
 Invite link for the official on github? (not sure, the server hosting the official version is quite bad, i don't think it can take much more)
 Message logging for active channel
@@ -30,6 +29,8 @@ Module SDK
 Module SDK documentation (and build-in XML docs)
 
 Bot features (each feature needs its own module):
+Authorization module (command +authorize <section> <code> to connect applications)
+Prefix command
 Command to show which users have a specific role (permission can be set by the admin)
 Nickname change detection, per channel
 Timers (single line)
